add backend Dockerfile

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,7 +7,7 @@ run-backend:
 	./bin/app --conf=./conf/api-config.json
 
 run-backend-docker:
-	docker run
+	docker run -ti --rm  -p 38080:38080 ogre0403/twgc:latest
 
 build-backend-img:
 	docker build -t ogre0403/twgc:latest .
