--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM golang:1.9
 
-WORKDIR /go/src/github.com/hyperpilotio/hyperpilot-operator
+WORKDIR /go/src/gitlab.com/nchc-ai/AI-Eduational-Platform/backend
 
 RUN useradd -u 10001 kube-operator
 
@@ -15,8 +15,9 @@ RUN make build-in-docker
 
 FROM ubuntu:xenial
 RUN apt-get update && apt-get -y install curl
-RUN mkdir -p /etc/operator
+RUN mkdir -p /etc/api-server
 
-COPY --from=0 /go/src/github.com/hyperpilotio/hyperpilot-operator/bin/linux/hyperpilot-operator .
-COPY --from=0 /go/src/github.com/hyperpilotio/hyperpilot-operator/conf/operator_config.json /etc/operator
-CMD ["./hyperpilot-operator"]
+COPY --from=0 /go/src/gitlab.com/nchc-ai/AI-Eduational-Platform/backend/bin/app .
+COPY --from=0 /go/src/gitlab.com/nchc-ai/AI-Eduational-Platform/backend/conf/api-config-docker.json /etc/api-server/api-config.json
+COPY --from=0 /go/src/gitlab.com/nchc-ai/AI-Eduational-Platform/backend/conf/openstack-kubeconfig /etc/api-server
+CMD ["/app"]
