--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-scroll": "^1.7.9",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-api-middleware": "^2.3.0",
