--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "path": "^0.12.7",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
+    "react-avatar": "^3.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.0",
     "react-document-meta": "^3.0.0-beta.2",
