--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^16.3.2",
     "react-google-analytics": "^0.2.0",
     "react-i18next": "^7.6.1",
+    "react-icons": "^2.2.7",
     "react-moment": "^0.7.0",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
@@ -52,6 +53,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scroll": "^1.7.9",
+    "react-toggle-button": "^2.2.0",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-api-middleware": "^2.3.0",
