--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "author": "JF Studio",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
     "connect-flash": "^0.1.1",
