--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "dev": "node server.js",
     "production": "webpack --config webpack.config.prod.js"
   },
-  "author": "JF Studio",
+  "author": "FreeFolk TM Studio",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
@@ -39,6 +39,7 @@
     "react-avatar": "^3.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.0",
+    "react-datepicker": "^1.5.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.3.2",
     "react-google-analytics": "^0.2.0",
@@ -48,12 +49,14 @@
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
     "react-powerplug": "^1.0.0-alpha.7",
+    "react-quill": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scroll": "^1.7.9",
+    "react-select": "^1.2.1",
     "react-toggle-button": "^2.2.0",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
