--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
+    "codemirror": "^5.39.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "create-react-class": "^15.6.3",
@@ -27,6 +28,7 @@
     "i18next": "^11.3.2",
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.10",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
@@ -34,6 +36,7 @@
     "mysql": "^2.15.0",
     "passport": "^0.4.0",
     "path": "^0.12.7",
+    "prismjs": "^1.15.0",
     "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-avatar": "^3.0.2",
@@ -65,6 +68,8 @@
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.1",
     "sass-loader": "^7.0.1",
+    "slate": "^0.34.2",
+    "slate-react": "^0.12.11",
     "strip-loader": "^0.1.2",
     "webpack": "^4.8.3",
     "webpack-dev-middleware": "^3.1.3",
