--- a/backend/conf/api-config-docker.json
+++ b/backend/conf/api-config-docker.json
@@ -22,6 +22,7 @@
     "database": "twgc"
   },
   "kubernetes": {
-    "kubeconfig": "/etc/api-server/openstack-kubeconfig"
+    "kubeconfig": "/etc/api-server/openstack-kubeconfig",
+    "expose_ip": "http://140.110.5.22"
   }
 }
