--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,17 +7,18 @@ run-backend:
 	./bin/app --conf=./conf/api-config.json
 
 run-backend-docker:
-	docker run -ti --rm  -p 38080:38080 ogre0403/twgc:latest
+	docker run -ti --rm  -p 38080:38080 ogre0403/twgc:local
 
 build-backend-img:
-	docker build -t ogre0403/twgc:latest .
+	docker build -t ogre0403/twgc:local -f Dockerfiles/Dockerfile .
+
+build-backend-img-k8s:
+	docker build -t ogre0403/twgc:k8s -f Dockerfiles/Dockerfile-k8s .
 
 build-in-docker:
 	rm -rf bin/*
 	CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o bin/app ./cmd
 
-run-frontend:
-	npm  --prefix frontend start
 
 clean:
 	rm -rf bin/*
