complete markdown editor

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "author": "FreeFolk TM Studio",
   "license": "ISC",
   "dependencies": {
+    "@opuscapita/react-markdown": "2.2.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
@@ -67,8 +68,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.1",
+    "rich-markdown-editor": "^1.4.3-0",
     "sass-loader": "^7.0.1",
     "slate": "^0.34.2",
+    "slate-html-serializer": "^0.6.8",
+    "slate-md-editor": "^0.3.3",
     "slate-react": "^0.12.11",
     "strip-loader": "^0.1.2",
     "webpack": "^4.8.3",
