--- a/backend/conf/api-config-k8s.json
+++ b/backend/conf/api-config-k8s.json
@@ -15,7 +15,7 @@
     }
   },
   "database": {
-    "host": "mysql-svc.default",
+    "host": "twgc-database-svc.default",
     "port": 3306,
     "username": "twgc",
     "password": "twgc@NCHC",
