--- a/deploy/mysql-deployment.yaml
+++ b/deploy/mysql-deployment.yaml
@@ -1,18 +1,7 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mysql-pvc
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-deploy
+  name: twgc-database
 spec:
   selector:
     matchLabels:
@@ -25,7 +14,7 @@ spec:
         tier: mysql
     spec:
       containers:
-      - name: mysql
+      - name: twgc-database
         image: mysql:8
         env:
         - name: MYSQL_ROOT_PASSWORD
@@ -46,7 +35,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql-svc
+  name: twgc-database-svc
 spec:
   ports:
     - port: 3306
