build frontend image

--- a/backend/Dockerfiles/Dockerfile
+++ b/backend/Dockerfiles/Dockerfile
@@ -6,7 +6,7 @@ RUN useradd -u 10001 kube-operator
 
 RUN go get github.com/Masterminds/glide
 
-COPY .. .
+COPY . .
 
 RUN make install_deps
 RUN make build-in-docker
