use yaml files to create api-server & ui & db (#17, #23)

--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -37,6 +37,16 @@ spec:
         image: ogre0403/twgc:api-299f3bc-k8s
         ports:
         - containerPort: 38080
+        volumeMounts:
+        - name: twgc-api-conf
+          mountPath: /etc/api-server/
+      volumes:
+      - name: twgc-api-conf
+        configMap:
+          name: twgc-api-cm
+          items:
+          - key: api-conf
+            path: api-config.json
 ---
 apiVersion: v1
 kind: Service
@@ -47,3 +57,38 @@ spec:
     - port: 38080
   selector:
     tier: api-server
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: twgc-api-cm
+data:
+  api-conf: |-
+    {
+      "api-server": {
+        "isOutsideCluster": false,
+        "port": 38080,
+        "provider": {
+          "type": "go-oauth",
+          "name": "test-provider",
+          "client_id": "test_client_1",
+          "client_secret": "test_secret",
+          "auth_url": "http://140.110.5.22:30010/web/authorize",
+          "token_url": "http://140.110.5.22:30010/v1/oauth/tokens",
+          "refresh_url": "http://140.110.5.22:30010/v1/oauth/tokens",
+          "introspect_url": "http://140.110.5.22:30010/v1/oauth/introspect",
+          "redirect_url": "http://localhost:3010/user/course"
+        }
+      },
+      "database": {
+        "host": "twgc-database-svc.default",
+        "port": 3306,
+        "username": "twgc",
+        "password": "twgc@NCHC",
+        "database": "twgc"
+      },
+      "kubernetes": {
+        "kubeconfig": "/etc/api-server/openstack-kubeconfig",
+        "expose_ip": "http://140.110.5.22"
+      }
+    }
