--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -2,4 +2,4 @@ TAG = $(shell git rev-parse --short HEAD)
 
 
 build-frontend-img-k8s:
-	docker build -t ogre0403/twgc:ui-$(TAG)-k8s .
+	docker build -t ogre0403/twgc:ui-$(TAG) .
