--- a/backend/Makefile
+++ b/backend/Makefile
@@ -9,14 +9,14 @@ run-backend:
 	./bin/app --conf=./conf/api-config.json
 
 run-backend-docker:
-	docker run -ti --rm  -p 38080:38080 ogre0403/twgc:api-$(TAG)-local
+	docker run -ti --rm  -p 38080:38080 ogre0403/twgc:api-$(TAG)
 
 build-backend-img:
-	docker build -t ogre0403/twgc:api-$(TAG)-local -f Dockerfiles/Dockerfile .
+	docker build -t ogre0403/twgc:api-$(TAG) .
 
 
-build-backend-img-k8s:
-	docker build -t ogre0403/twgc:api-$(TAG)-k8s -f Dockerfiles/Dockerfile-k8s .
+#build-backend-img-k8s:
+#	docker build -t ogre0403/twgc:api-$(TAG)-k8s -f Dockerfiles/Dockerfile-k8s .
 
 
 build-in-docker:
