--- a/deploy/mysql-deployment.yaml
+++ b/deploy/mysql-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         volumeMounts:
         - name: mysql-storage
           mountPath: /var/lib/mysql
-        - name: init-db-script
+        - name: twgc-database-init
           mountPath: /docker-entrypoint-initdb.d
       volumes:
       - name: mysql-storage
@@ -31,6 +31,12 @@ spec:
       - name: init-db-script
         persistentVolumeClaim:
           claimName: init-db
+      - name: twgc-database-init
+        configMap:
+          name: twgc-database-cm
+          items:
+          - key: database-init
+            path: init.sql
 ---
 apiVersion: v1
 kind: Service
@@ -41,3 +47,15 @@ spec:
     - port: 3306
   selector:
     tier: mysql
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: twgc-database-cm
+data:
+  database-init: |-
+    CREATE DATABASE twgc;
+    CREATE USER 'twgc'@'localhost' IDENTIFIED BY 'twgc@NCHC';
+    CREATE USER 'twgc'@'%' IDENTIFIED BY 'twgc@NCHC';
+    GRANT ALL ON twgc.* TO 'twgc'@'localhost';
+    GRANT ALL ON twgc.* TO 'twgc'@'%';
