--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "i18next-xhr-backend": "^1.5.1",
     "immutable": "^3.8.2",
     "lodash": "^4.17.10",
+    "material-ui": "^0.20.1",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
@@ -53,6 +54,7 @@
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
     "react-powerplug": "^1.0.0-alpha.7",
+    "react-progress-2": "^4.4.3",
     "react-quill": "^1.3.0",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
