--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,7 +53,7 @@
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
-    "react-powerplug": "^1.0.0-alpha.7",
+    "react-powerplug": "^1.0.0-rc.1",
     "react-progress-2": "^4.4.3",
     "react-quill": "^1.3.0",
     "react-redux": "^5.0.7",
