update deployemnt yaml

--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,5 +1,6 @@
 TAG = $(shell git rev-parse --short HEAD)
 
 
-build-frontend-img-k8s:
+build-frontend-img:
+	rm -rf node_modules
 	docker build -t ogre0403/twgc:ui-$(TAG) .
