add namespace configutation, api-server can create resource in non-default namespace (#24)

--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -89,6 +89,7 @@ data:
       },
       "kubernetes": {
         "kubeconfig": "/etc/api-server/openstack-kubeconfig",
-        "expose_ip": "http://140.110.5.22"
+        "expose_ip": "http://140.110.5.22",
+        "namespace": "default"
       }
     }
