--- a/backend/conf/api-config-k8s.json
+++ b/backend/conf/api-config-k8s.json
@@ -23,6 +23,7 @@
   },
   "kubernetes": {
     "kubeconfig": "/etc/api-server/openstack-kubeconfig",
-    "expose_ip": "http://140.110.5.22"
+    "expose_ip": "http://140.110.5.22",
+    "namespace": "default"
   }
 }
