add logout proxy (#30)

--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -77,6 +77,7 @@ data:
           "token_url": "http://140.110.5.22:30010/v1/oauth/tokens",
           "refresh_url": "http://140.110.5.22:30010/v1/oauth/tokens",
           "introspect_url": "http://140.110.5.22:30010/v1/oauth/introspect",
+          "logout_url": "http://140.110.5.22:30010/v1/oauth/logout",
           "redirect_url": "http://140.110.18.35:30004/user/course"
         }
       },
