--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,17 +5,20 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack --config webpack.config.dev.js",
+    "build": "NODE_ENV=PROD webpack --progress --config ./webpack.config.build.js",
     "dev": "webpack-dev-server --config webpack.config.dev.js",
-    "prod": "webpack --config webpack.config.prod.js"
+    "prod": "NODE_ENV=PROD node server",
+    "forever": "NODE_ENV=PROD forever start --minUptime 1000 --spinSleepTime 1000 server.js"
   },
   "author": "FreeFolk TM Studio",
   "license": "ISC",
   "dependencies": {
     "@opuscapita/react-markdown": "2.2.3",
     "axios": "^0.18.0",
+    "babel": "^6.23.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
+    "clean-webpack-plugin": "^0.1.19",
     "codemirror": "^5.39.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
