move const jobintreval to api.js

--- a/deploy/frontend-deployment.yaml
+++ b/deploy/frontend-deployment.yaml
@@ -50,3 +50,4 @@ data:
     export const WEBSITE_URL = 'http://140.110.18.35:30004';
     export const API_URL = '';
     export const AUTH_PROVIDER_URL = 'http://140.110.5.22:30010';
+    export const jobInterval = 60000;
