--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -73,15 +73,15 @@ data:
           "name": "test-provider",
           "client_id": "test_client_1",
           "client_secret": "test_secret",
-          "auth_url": "http://140.110.5.22:30010/web/authorize",
-          "token_url": "http://140.110.5.22:30010/v1/oauth/tokens",
-          "refresh_url": "http://140.110.5.22:30010/v1/oauth/tokens",
-          "introspect_url": "http://140.110.5.22:30010/v1/oauth/introspect",
-          "logout_url": "http://140.110.5.22:30010/v1/oauth/logout",
-          "register_url": "http://140.110.5.22:30010/v1/oauth/register",
-          "update_url": "http://140.110.5.22:30010/v1/oauth/update",
-          "query_url": "http://140.110.5.22:30010/v1/oauth/query",
-          "redirect_url": "http://140.110.18.35:30004/user/course"
+          "auth_url": "http://140.110.18.35:30008/web/authorize",
+          "token_url": "http://140.110.18.35:30008/v1/oauth/tokens",
+          "refresh_url": "http://140.110.18.35:30008/v1/oauth/tokens",
+          "introspect_url": "http://140.110.18.35:30008/v1/oauth/introspect",
+          "logout_url": "http://140.110.18.35:30008/v1/oauth/logout",
+          "register_url": "http://140.110.18.35:30008/v1/oauth/register",
+          "update_url": "http://140.110.18.35:30008/v1/oauth/update",
+          "query_url": "http://140.110.18.35:30008/v1/oauth/query",
+          "redirect_url": "http://aitrain.nchc.org.tw:30004/user/course""
         }
       },
       "database": {
@@ -93,7 +93,7 @@ data:
       },
       "kubernetes": {
         "kubeconfig": "/etc/api-server/openstack-kubeconfig",
-        "expose_ip": "http://140.110.5.22",
+        "expose_ip": "http://140.110.18.35",
         "namespace": "default",
         "resourceLimit": {
           "cpu": "500m",
