--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -34,7 +34,7 @@ spec:
       serviceAccountName: twgc-api-server
       containers:
       - name: twgc-api
-        image: ogre0403/twgc:api-1c803ce
+        image: ogre0403/twgc:api-43f9805
         ports:
         - containerPort: 38080
         volumeMounts:
@@ -81,7 +81,7 @@ data:
           "register_url": "http://140.110.18.35:30008/v1/oauth/register",
           "update_url": "http://140.110.18.35:30008/v1/oauth/update",
           "query_url": "http://140.110.18.35:30008/v1/oauth/query",
-          "redirect_url": "http://aitrain.nchc.org.tw:30004/user/course"
+          "redirect_url": "http://aitrain.nchc.org.tw/user/course"
         }
       },
       "database": {
