--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,4 +1,11 @@
-TAG = $(shell git rev-parse --short HEAD)
+COMMIT_HASH = $(shell git rev-parse --short HEAD)
+RET = $(shell git describe --tags $(COMMIT_HASH) 1>&2 2> /dev/null; echo $$?)
+
+ifeq ($(RET),0)
+    TAG = $(shell git describe --tags $(COMMIT_HASH))
+else
+	TAG = $(COMMIT_HASH)
+endif
 
 install_deps:
 	glide install
@@ -13,10 +20,6 @@ run-backend-docker:
 
 build-backend-img:
 	docker build -t ogre0403/twgc:api-$(TAG) .
-
-
-#build-backend-img-k8s:
-#	docker build -t ogre0403/twgc:api-$(TAG)-k8s -f Dockerfiles/Dockerfile-k8s .
 
 
 build-in-docker:
