--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,5 +1,11 @@
-TAG = $(shell git rev-parse --short HEAD)
+COMMIT_HASH = $(shell git rev-parse --short HEAD)
+RET = $(shell git describe --tags $(COMMIT_HASH) 1>&2 2> /dev/null; echo $$?)
 
+ifeq ($(RET),0)
+    TAG = $(shell git describe --tags $(COMMIT_HASH))
+else
+	TAG = $(COMMIT_HASH)
+endif
 
 build-frontend-img:
 	rm -rf node_modules
