--- a/deploy/api-server-deployment.yaml
+++ b/deploy/api-server-deployment.yaml
@@ -102,8 +102,13 @@ data:
         "expose_port": {
           "web": 80,
           "jupyter": 8888,
+          "tensorboard": 6006,
+          "jupyterhub": 8000,
+          "rm": 8088,
+          "hs": 19888,
           "digitis": 5000,
-          "ttyd": 7681
+          "ttyd": 7681,
+          "namenode": 50070
         }
       }
     }
