--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "create-react-class": "^15.6.3",
+    "echarts": "^4.2.0-rc.2",
     "ejs": "~1.0.0",
     "express": "~4.9.8",
     "express-session": "^1.15.6",
@@ -49,9 +50,11 @@
     "react-avatar": "^3.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.0",
+    "react-cron-builder": "^1.0.3",
     "react-datepicker": "^1.5.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.3.2",
+    "react-gantt": "^2.1.7",
     "react-google-analytics": "^0.2.0",
     "react-i18next": "^7.6.1",
     "react-icons": "^2.2.7",
