--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next-browser-languagedetector": "^2.2.0",
     "i18next-xhr-backend": "^1.5.1",
     "immutable": "^3.8.2",
+    "interactjs": "^1.3.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
@@ -54,10 +55,12 @@
     "react-datepicker": "^1.5.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.3.2",
+    "react-event-calendar": "^0.3.0",
     "react-gantt": "^2.1.7",
+    "react-gantt-timeline": "^0.4.0",
     "react-google-analytics": "^0.2.0",
     "react-i18next": "^7.6.1",
-    "react-icons": "^2.2.7",
+    "react-icons": "3.2.2",
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
@@ -72,6 +75,7 @@
     "react-router-redux": "^4.0.8",
     "react-scroll": "^1.7.9",
     "react-select": "^1.2.1",
+    "react-sizeme": "^2.5.2",
     "react-toggle-button": "^2.2.0",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
@@ -113,6 +117,8 @@
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
     "style-loader": "^0.21.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.0"
