--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "author": "FreeFolk TM Studio",
   "license": "ISC",
-  "engines" : {
-    "node" : ">=8.11.3"
+  "engines": {
+    "node": ">=8.11.3"
   },
   "dependencies": {
     "@opuscapita/react-markdown": "2.2.3",
@@ -40,6 +40,7 @@
     "immutable": "^3.8.2",
     "interactjs": "^1.3.4",
     "jquery": "^3.3.1",
+    "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "material-ui": "^0.20.1",
     "method-override": "^2.3.10",
@@ -54,7 +55,6 @@
     "react-avatar": "^3.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.0",
-    "react-cookie": "^3.0.7",
     "react-cron-builder": "^1.0.3",
     "react-datepicker": "^1.5.0",
     "react-document-meta": "^3.0.0-beta.2",
