--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "build": "NODE_ENV=PROD webpack --progress --config ./webpack.config.build.js",
     "dev": "webpack-dev-server --config webpack.config.dev.js",
+    "docker": "webpack-dev-server --config webpack.config.docker.js",
     "proxy": "webpack-dev-server --config webpack.config.proxy.js",
     "prod": "NODE_ENV=PROD node server",
     "forever": "NODE_ENV=PROD forever start --minUptime 1000 --spinSleepTime 1000 server.js",
