--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-google-analytics": "^0.2.0",
     "react-i18next": "^7.6.1",
     "react-icons": "3.2.2",
+    "react-key-value": "^2.0.0",
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
