--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "build": "NODE_ENV=PROD webpack --progress --config ./webpack.config.build.js",
     "dev": "webpack-dev-server --config webpack.config.dev.js",
+    "test": "jest",
     "docker": "webpack-dev-server --config webpack.config.docker.js",
     "proxy": "webpack-dev-server --config webpack.config.proxy.js",
     "prod": "NODE_ENV=PROD node server",
@@ -121,6 +122,7 @@
     "eslint-plugin-react": "^6.2.1",
     "exports-loader": "^0.6.4",
     "file-loader": "^1.1.10",
+    "jest": "^23.6.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.9.0",
     "style-loader": "^0.21.0",
