--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-avatar": "^3.0.2",
     "react-bootstrap-table": "^4.3.1",
     "react-burger-menu": "^2.5.0",
+    "react-clipboard.js": "^2.0.2",
     "react-cron-builder": "^1.0.3",
     "react-datepicker": "^1.5.0",
     "react-document-meta": "^3.0.0-beta.2",
