--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
     "clean-webpack-plugin": "^0.1.19",
-    "codemirror": "^5.39.0",
+    "codemirror": "^5.43.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "create-react-class": "^15.6.3",
@@ -70,6 +70,7 @@
     "react-i18next": "^7.6.1",
     "react-icons": "3.2.2",
     "react-key-value": "^2.0.0",
+    "react-markdown": "^4.0.6",
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
