--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "create-react-class": "^15.6.3",
+    "draft-js": "^0.10.5",
+    "draft-js-plugins-editor": "^2.1.1",
+    "draft-js-static-toolbar-plugin": "^3.0.0",
     "echarts": "^4.2.0-rc.2",
     "ejs": "~1.0.0",
     "express": "~4.9.8",
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "font-awesome": "^4.7.0",
     "helmet": "^3.12.0",
+    "hljs": "^6.2.3",
     "html-webpack-plugin": "^3.2.0",
     "i18next": "^11.3.2",
     "i18next-browser-languagedetector": "^2.2.0",
@@ -71,6 +76,7 @@
     "react-icons": "3.2.2",
     "react-key-value": "^2.0.0",
     "react-markdown": "^4.0.6",
+    "react-mde": "^6.0.0",
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
     "react-notify-toast": "^0.5.0",
@@ -95,6 +101,7 @@
     "regenerator-runtime": "^0.11.1",
     "rich-markdown-editor": "^1.4.3-0",
     "sass-loader": "^7.0.1",
+    "showdown": "^1.9.0",
     "slate": "^0.34.2",
     "slate-html-serializer": "^0.6.8",
     "slate-md-editor": "^0.3.3",
