--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "slate-md-editor": "^0.3.3",
     "slate-react": "^0.12.11",
     "strip-loader": "^0.1.2",
+    "styled-components": "^4.1.3",
     "webpack": "^4.20.2",
     "webpack-dev-middleware": "^3.1.3",
     "webpack-hot-middleware": "^2.22.1"
