--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-select": "^1.2.1",
     "react-sizeme": "^2.5.2",
     "react-toggle-button": "^2.2.0",
+    "react-top-loading-bar": "^1.0.3",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
     "redux-api-middleware": "^2.3.0",
