--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-burger-menu": "^2.5.0",
     "react-clipboard.js": "^2.0.2",
     "react-cron-builder": "^1.0.3",
-    "react-datepicker": "^1.5.0",
+    "react-datepicker": "^2.1.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.3.2",
     "react-event-calendar": "^0.3.0",
@@ -74,6 +74,7 @@
     "react-google-analytics": "^0.2.0",
     "react-i18next": "^7.6.1",
     "react-icons": "3.2.2",
+    "react-if": "^3.1.3",
     "react-key-value": "^2.0.0",
     "react-markdown": "^4.0.6",
     "react-mde": "^6.0.0",
@@ -91,6 +92,7 @@
     "react-scroll": "^1.7.9",
     "react-select": "^1.2.1",
     "react-sizeme": "^2.5.2",
+    "react-tabs": "^3.0.0",
     "react-toggle-button": "^2.2.0",
     "react-top-loading-bar": "^1.0.3",
     "reactstrap": "^6.0.1",
