--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "create-react-class": "^15.6.3",
+    "cron-parser": "^2.7.3",
     "draft-js": "^0.10.5",
     "draft-js-plugins-editor": "^2.1.1",
     "draft-js-static-toolbar-plugin": "^3.0.0",
