--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-icons": "3.2.2",
     "react-if": "^3.1.3",
     "react-key-value": "^2.0.0",
+    "react-loader": "^2.4.5",
     "react-markdown": "^4.0.6",
     "react-mde": "^6.0.0",
     "react-moment": "^0.7.7",
