--- a/package.json
+++ b/package.json
@@ -94,8 +94,8 @@
     "react-scroll": "^1.7.9",
     "react-select": "^1.2.1",
     "react-sizeme": "^2.5.2",
+    "react-switch": "^4.1.0",
     "react-tabs": "^3.0.0",
-    "react-toggle-button": "^2.2.0",
     "react-top-loading-bar": "^1.0.3",
     "reactstrap": "^6.0.1",
     "redux": "^4.0.0",
