--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
+  "private": true,
   "name": "ai-lab",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "AI Lab official website for NARLabs",
+  "workspaces": [
+    "containers",
+    "components"
+  ],
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "build": "NODE_ENV=PROD webpack --progress --config ./webpack.config.build.js",
-    "dev": "webpack-dev-server --config webpack.config.dev.js",
-    "test": "jest",
+    "dev": "webpack-dev-server --config webpack.config.dev.js --client-log-level error",
+    "test": "jest --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
     "docker": "webpack-dev-server --config webpack.config.docker.js",
     "proxy": "webpack-dev-server --config webpack.config.proxy.js",
     "prod": "NODE_ENV=PROD node server",
@@ -121,6 +126,7 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.2",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-polyfill": "^6.26.0",
@@ -129,6 +135,9 @@
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.14.0",
@@ -136,14 +145,29 @@
     "eslint-plugin-react": "^6.2.1",
     "exports-loader": "^0.6.4",
     "file-loader": "^1.1.10",
-    "jest": "^23.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jasmine-reporters": "^2.2.0",
+    "jest": "^19.0.2",
     "json-loader": "^0.5.7",
+    "nock": "^10.0.0",
     "node-sass": "^4.9.0",
+    "raf": "^3.4.1",
+    "react-test-renderer": "^15.4.2",
+    "redux-mock-store": "^1.5.3",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-workspace": "^0.0.2"
+  },
+  "jest": {
+    "setupFiles": [
+      "./setupTests.js"
+    ],
+    "testMatch": [
+      "<rootDir>/tests/__tests__/**/*.{js,jsx,mjs}"
+    ]
   }
 }
