--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,14 @@
   "presets": [
      "react",
      "es2015"
+  ],
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./app"],
+      "alias": {
+        "test": "./tests",
+        "reducers": "./app/components"
+      }
+    }]
   ]
 }
