--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "@opuscapita/react-markdown": "2.2.3",
     "axios": "^0.18.0",
-    "babel": "^6.23.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.1.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -124,10 +123,12 @@
   "devDependencies": {
     "autoprefixer": "^8.5.0",
     "autoprefixer-loader": "^3.2.0",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^6.1.2",
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -154,6 +155,7 @@
     "raf": "^3.4.1",
     "react-test-renderer": "^15.4.2",
     "redux-mock-store": "^1.5.3",
+    "redux-observable": "^1.0.0",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -164,10 +166,10 @@
   },
   "jest": {
     "setupFiles": [
-      "./setupTests.js"
+      "./app/setupTests.js"
     ],
     "testMatch": [
-      "<rootDir>/tests/__tests__/**/*.{js,jsx,mjs}"
+      "<rootDir>/app/tests/__tests__/**/*.{js,jsx,mjs}"
     ]
   }
 }
