feat(test): setup the environment of test files

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,17 @@
 {
   "presets": [
-     "react",
-     "es2015"
+    "react",
+    "es2015",
+    "env",
+    "stage-2"
   ],
   "plugins": [
+    "transform-object-rest-spread",
     ["module-resolver", {
       "root": ["./app"],
       "alias": {
         "test": "./tests",
-        "reducers": "./app/components"
+        "components": "./app/components"
       }
     }]
   ]
