--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "version": "1.0.0",
   "description": "AI Lab official website for NARLabs",
   "workspaces": [
+    "actions",
     "containers",
-    "components"
+    "components",
+    "store",
+    "constants"
   ],
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "build": "NODE_ENV=PROD webpack --progress --config ./webpack.config.build.js",
     "dev": "webpack-dev-server --config webpack.config.dev.js --client-log-level error",
-    "test": "jest --env=jsdom --setupTestFrameworkScriptFile=raf/polyfill",
+    "test": "jest --env=jsdom",
     "docker": "webpack-dev-server --config webpack.config.docker.js",
     "proxy": "webpack-dev-server --config webpack.config.proxy.js",
     "prod": "NODE_ENV=PROD node server",
@@ -129,16 +132,18 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.14.0",
@@ -150,12 +155,14 @@
     "jasmine-reporters": "^2.2.0",
     "jest": "^19.0.2",
     "json-loader": "^0.5.7",
-    "nock": "^10.0.0",
+    "nock": "^10.0.6",
     "node-sass": "^4.9.0",
     "raf": "^3.4.1",
+    "react-scripts": "1.0.15",
     "react-test-renderer": "^15.4.2",
     "redux-mock-store": "^1.5.3",
     "redux-observable": "^1.0.0",
+    "rxjs": "^6.4.0",
     "style-loader": "^0.21.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -170,6 +177,9 @@
     ],
     "testMatch": [
       "<rootDir>/app/tests/__tests__/**/*.{js,jsx,mjs}"
-    ]
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|gif|ttf|woff|woff2)$": "identity-obj-proxy"
+    }
   }
 }
