--- a/package.json
+++ b/package.json
@@ -3,13 +3,6 @@
   "name": "ai-lab",
   "version": "1.0.0",
   "description": "AI Lab official website for NARLabs",
-  "workspaces": [
-    "actions",
-    "containers",
-    "components",
-    "store",
-    "constants"
-  ],
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -83,9 +76,11 @@
     "react-i18next": "^7.6.1",
     "react-icons": "3.2.2",
     "react-if": "^3.1.3",
+    "react-kawaii": "^0.11.0",
     "react-key-value": "^2.0.0",
     "react-loader": "^2.4.5",
     "react-markdown": "^4.0.6",
+    "react-md-spinner": "^0.3.0",
     "react-mde": "^6.0.0",
     "react-moment": "^0.7.7",
     "react-notification-badge": "^1.3.4",
