build: set up Node.js dev environment and update build tools
- Add a new Dockerfile for the dev container setup with Node.js 16.20.2 using the bookworm variant.
- Introduce a new `devcontainer.json` file with configurations for Node.js development, including specific VSCode extensions.
- Update the main Dockerfile to use Node.js 16.20.2 alpine and change the WORKDIR path from GitLab to GitHub.
- Rename `build-frontend-img` to `image` target in the Makefile.
- Upgrade `sass-loader` from version 7.0.1 to 7.1.0 in `package.json`.
- Replace `node-sass` with `dart-sass` in `package.json` using the yarn alias.

Signed-off-by: Jimmy Chuang <ogre0403@gmail.com>

--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.1",
     "rich-markdown-editor": "^1.4.3-0",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.1.0",
     "showdown": "^1.9.0",
     "slate": "^0.34.2",
     "slate-html-serializer": "^0.6.8",
@@ -151,7 +151,7 @@
     "jest": "^19.0.2",
     "json-loader": "^0.5.7",
     "nock": "^10.0.6",
-    "node-sass": "^4.9.0",
+    "node-sass": "yarn:dart-sass",
     "raf": "^3.4.1",
     "react-scripts": "1.0.15",
     "react-test-renderer": "^15.4.2",
